# xgit

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: install-hooks.sh  install.sh  pre-commit
src/: ai.rs  cli.rs  git_repo.rs  main.rs
src/commands/: add.rs  branch.rs  branch_prune.rs  branch_prune.rs~  branch_stats.rs  commit.rs  diff.rs  git_passthrough.rs  mod.rs  status.rs
src/git/: mod.rs
src/git/branches/: mod.rs  operations.rs  tracking.rs
src/git/commits/: operations.rs
src/git/merge/: mod.rs  operations.rs  pull.rs
src/git/remotes/: mod.rs  operations.rs  sync.rs
src/git/repository/: core.rs  mod.rs  signature.rs
src/github/: client.rs  mod.rs  pr_index.rs  pr_matcher.rs  pr_service.rs  types.rs
src/test_utils/: git_repo_test_decorator.rs  mod.rs  repo_extensions.rs
src/tui/: branch_display.rs  mod.rs
