[package]
name = "xgit"
version = "0.1.0"
edition = "2024"
description = "A enhanced AI-powered Git tool"
license = "MIT"
authors = ["Xuanqi Li<lixuanqi1995@gmail.com>"]
repository = "https://github.com/LiXuanqi/gitx"
homepage = "https://github.com/LiXuanqi/gitx"
keywords = ["git", "cli", "ai", "commit", "branch"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
console = "0.15.8"
git2 = { version = "0.20.2", default-features = false } # TODO: remove default-features = false in the future
inquire = "0.7.5"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
assert_fs = "1.1.3"
